add "hell_electron" test example (with nodeIntegration false option), add navie debug mode (openDevTools), add test icon in example/top

--- a/example/hello_electron/index.html
+++ b/example/hello_electron/index.html
@@ -6,7 +6,7 @@
    </head> 
    
    <body> 
-    <h1>Hello electron test!!</h1>
+    <h1>Hello Electron Installer test!!</h1>
     <script type='text/javascript' src = "./render.js"></script> 
    </body> 
 </html>
